# smart-car-autonomous-platform

./: .gitignore  LICENSE  README.md
software/cpp_runtime/: CMakeLists.txt  README.md
software/cpp_runtime/src/: lane_control_main.cpp  lane_detector.cpp  lane_detector.hpp  main.cpp  tensorrt_runner.cpp  tensorrt_runner.hpp
